"Overlay going out of bound fixed"

--- a/app/static/analysis.css
+++ b/app/static/analysis.css
@@ -396,6 +396,16 @@
 	min-height: 80;
 }
 
+.shiftLeft {
+	left: -50%;
+	transition: 0s;
+}
+
+.shiftUp {
+	top: -50%;
+	transition: 0s;
+}
+
 /* Animations */
 @keyframes fadeEffect {
 	0% {
